--- a/styles.scss
+++ b/styles.scss
@@ -189,6 +189,10 @@ body {
                 margin: 0px 16px 0px 16px;
 
                 outline: none;
+
+                @media (min-width: 768px) {
+                    width: 380px;
+                }
             }
 
             &-image {
@@ -254,6 +258,18 @@ body {
     }
 }
 
+.error {
+    color: hsl(0, 100%, 74%);
+    font-style: italic;
+    align-self: flex-end;
+    margin-right: 28px;
+    margin-bottom: 16px;
+    font-size: 12px;
+    font-weight: 500;
+
+    display: none;
+}
+
 .attribution {
     color: hsl(0, 0%, 100%);
 }
@@ -261,3 +277,7 @@ body {
 footer {
     justify-self: center;
 }
+
+.red::-webkit-input-placeholder {
+    color: hsl(0, 100%, 74%);
+ }
